hero-container desktop view overflow bug fixed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,9 +35,7 @@
     position: relative;
     background: url(../img/MOBES.png) no-repeat $white;
     background-position: left 30px bottom 0;
-    
-    // overflow: hidden;
-
+  
     @include breakpoint (tablet) {
       background: none;
       height: calc(100vh - 105px);
@@ -52,8 +50,15 @@
       justify-content: flex-start;
       align-items: center;
       position: relative;
-      height: 721px;
+      height: 100%;
       margin-bottom: 100px;
+
+      overflow: hidden;
+
+
+      @include breakpoint (desktop) {
+        height: 100%;       
+      }
 
       @include breakpoint (tablet) {
         max-width: 100%;
@@ -105,6 +110,11 @@
         top: 159px;
         left: 0;
 
+        @include breakpoint (desktop) {
+          top: 50%;
+          transform: translateY(-50%);         
+        }
+
         @include breakpoint (tablet) {
           width: 100%;
           margin: auto;
@@ -150,143 +160,153 @@
               font-size: 30px;
             }
           }
+
+          .blue-btn {
+            padding: 25px 45px;
+          }
         }
       }
   
-      .hero-container_sigestion {
-        position: absolute;
-        width: 50%;
-        background: $blue1;
-        padding: 20px;
-        bottom: 0;
-        right: -945px;
-        color: $white;
-        display: flex;
-        cursor: pointer;
+      //////////////////
+      // sugestion subject
+      // .hero-container_sugestion {
+      //   position: absolute;
+      //   width: 50%;
+      //   background: $blue1;
+      //   padding: 20px;
+      //   bottom: 0;
+      //   right: -945px;
+      //   color: $white;
+      //   display: flex;
+      //   cursor: pointer;
 
-        display: flex;
-        cursor: pointer;
-        flex-flow: row wrap;
+      //   display: flex;
+      //   cursor: pointer;
+      //   flex-flow: row wrap;
 
-        transition: all 0.3s ease-in-out;
+      //   transition: all 0.3s ease-in-out;
 
-        @include breakpoint (mobile) {
-          overflow-x: auto;
-          width: 100%;
-          bottom: 0;
-          left: 0;
-          top: 0;
-          color: $white;
-          right: 0;
-          transform: translate(-100%, 0);
-        }
+      //   @include breakpoint (desktop) {
+      //     background-color: orange;
+      //   }
 
-        .sugest-input-box {
-          flex: 50%;
-          padding: 10px 0;
+      //   @include breakpoint (mobile) {
+      //     overflow-x: auto;
+      //     width: 100%;
+      //     bottom: 0;
+      //     left: 0;
+      //     top: 0;
+      //     color: $white;
+      //     right: 0;
+      //     transform: translate(-100%, 0);
+      //   }
 
-          p {
-            padding-bottom: 10px;
-          }
+      //   .sugest-input-box {
+      //     flex: 50%;
+      //     padding: 10px 0;
 
-          input.input-sugest {
-            width: 95%;
-            padding: 30px;
-            border: none;
-            outline: none;
-          }
-        }
+      //     p {
+      //       padding-bottom: 10px;
+      //     }
 
-        .sugest-input-box_coments {
-          flex: 100%;
-          textarea {
-            width: 97%;
-            border: none;
-            outline: none;
-          }
-        }
+      //     input.input-sugest {
+      //       width: 95%;
+      //       padding: 30px;
+      //       border: none;
+      //       outline: none;
+      //     }
+      //   }
 
-        .sugest-left-btn {
-          display: flex;
-          justify-content: flex-end;
-          align-items: center;
-          width: 100%;
-        }
+      //   .sugest-input-box_coments {
+      //     flex: 100%;
+      //     textarea {
+      //       width: 97%;
+      //       border: none;
+      //       outline: none;
+      //     }
+      //   }
 
-        .hero-container_sugest {
-          position: absolute;
-          background: $blue1;
-          top: 23%;
-          left: -240px;
-          transform: translateY(-50%) rotate(-90deg);
-          padding: 20px 40px;
-          transform-origin: bottom right;
+      //   .sugest-left-btn {
+      //     display: flex;
+      //     justify-content: flex-end;
+      //     align-items: center;
+      //     width: 100%;
+      //   }
 
-          @include breakpoint (tablet) {
-            display: none;
-          }
+      //   .hero-container_sugest {
+      //     position: absolute;
+      //     background: $blue1;
+      //     top: 23%;
+      //     left: -240px;
+      //     transform: translateY(-50%) rotate(-90deg);
+      //     padding: 20px 40px;
+      //     transform-origin: bottom right;
 
-          @include breakpoint (mobile) {
-            display: none;
-          }
+      //     @include breakpoint (tablet) {
+      //       display: none;
+      //     }
 
-          a {
-            color: $white;
-            letter-spacing: 1px;
-            font-size: 18px;
-            font-weight: bold;
-          }
-        }
+      //     @include breakpoint (mobile) {
+      //       display: none;
+      //     }
 
-        .mobile-view-hide {
-          @include breakpoint (mobile) {
-            display: none;
-          }
+      //     a {
+      //       color: $white;
+      //       letter-spacing: 1px;
+      //       font-size: 18px;
+      //       font-weight: bold;
+      //     }
+      //   }
 
-          @include breakpoint (desktop) {
-            display: block;
-          }
+      //   .mobile-view-hide {
+      //     @include breakpoint (mobile) {
+      //       display: none;
+      //     }
+
+      //     @include breakpoint (desktop) {
+      //       display: block;
+      //     }
 
           
-        }
+      //   }
 
-      }
+      // }
       
-      .hero-container_sigestion.active {
-        right: 0;
-        z-index: 50;
+      // .hero-container_sugestion.active {
+      //   right: 0;
+      //   z-index: 50;
         
-        @include breakpoint (tablet) {
-          transform: translate(0%, 0%);
-          height: 450px;
-          overflow-y: scroll;
-        }
+      //   @include breakpoint (tablet) {
+      //     transform: translate(0%, 0%);
+      //     height: 450px;
+      //     overflow-y: scroll;
+      //   }
 
-        @include breakpoint (mobile) {
-          transform: translate(0%, 0%);
-        }
-      }
+      //   @include breakpoint (mobile) {
+      //     transform: translate(0%, 0%);
+      //   }
+      // }
       
-      .mobile-view-hide {
-        display: flex;
-        padding: 10px;
-        background: $blue1;
-        text-align: center;
-        justify-content: center;
-        position: absolute;
-        top: 0;
-        right: 0;
+      // .mobile-view-hide {
+      //   display: flex;
+      //   padding: 10px;
+      //   background: $blue1;
+      //   text-align: center;
+      //   justify-content: center;
+      //   position: absolute;
+      //   top: 0;
+      //   right: 0;
 
         
-        @include breakpoint (desktop) {
-          display: none;
-        }
-        a {
-          color: $white;
-          cursor: pointer;
-        }
+      //   @include breakpoint (desktop) {
+      //     display: none;
+      //   }
+      //   a {
+      //     color: $white;
+      //     cursor: pointer;
+      //   }
 
-      }
+      // }
 
     }
   
