--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -72,7 +72,7 @@
           letter-spacing: 1px;
 
           @include breakpoint (desktop) {
-            width: 50%;
+            width: 80%;
             padding: 5px;
             border-bottom: 2px solid #000;
           }
